# QuantumComputingEvolutionaryAlgorithmDesign

./: .coverage  .gitignore  CITATION.cff  CMakeLists.txt  Config.py  EvolutionaryAlgorithm.py  NOTICE  QuantumComputer.py  QuantumComputerModified.py  QuantumRegister.py  QuantumRegisterSet.py  README.md  TESTING_PLAN.md  compile.sh  config.ini  coverage.txt  evolutionary-algorithm-parallel.cpp  evolutionary-algorithm-parallel.h  evolutionary-algorithm.cpp  evolutionary-algorithm.h  evolutionary_algorithm.py  main-parallel.cpp  main.cpp  main.h  mypy.ini  pytest.ini  quantum-computer.cpp  quantum-computer.h  quantum-computer.h.gch  quantum-test-generator.cpp  quantum-test-generator.h  quantum_computer_operations.py  quantum_computing_algorithm_building _script.py  quantum_computing_algorithm_building_script.py  quantum_machine_learning.py  requirements-dev.txt  requirements-study.txt  requirements.txt  target_generation.py
.github/: CODEOWNERS
Archive/: QuantumComputer.py  quantum_computing_algorithm_building_script.py  target_generation.py
Catch Test Version/: evolutionary-algorithm-parallel.cpp  evolutionary-algorithm-parallel.h  evolutionary-algorithm.cpp  evolutionary-algorithm.h  main-parallel.cpp  main.cpp  quantum-computer.cpp  quantum-computer.h  quantum-test-generator.cpp  tests-quantum-computer.cpp
Pre-eigen Version/: evolutionary-algorithm.cpp  quantum-test-generator.cpp
examples/: algorithm_building_script.py  grover_demonstration.py  run_qd_study.py  run_study.py
literature_review/: 01_landscape_overview.md  02_project_gap_analysis.md  (+6 more)
(+60 files in other folders)
